@@ -1,3 +1,7 @@
+7 January 2018: Wouter
+	- On FreeBSD warn if systcl settings do not allow server TCP FASTOPEN,
+	  and server tcp fastopen is enabled at compile time.
+
 12 December 2018: Wouter
 	- Fix for crash in dns64 module if response is null.
 
